<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">B-SKET</string>
    <string name="アカウントID">アカウントID</string>
    <string name="アカウント名">アカウント名</string>
    <string name="パスワード">パスワード</string>
    <string name="性別">性別</string>
    <string name="男">男</string>
    <string name="女">女</string>
    <string name="その他">その他</string>
    <string name="生年月日">生年月日</string>
    <string name="電話番号">電話番号</string>
    <string name="戻る">戻る</string>
    <string name="ログイン">ログイン</string>
    <string name="ログアウト">Logout?</string>
    <string name="hint">入力してください</string>
    <string name="はい">はい</string>
    <string name="いいえ">いいえ</string>
    <string name="作成">作成</string>
    <string name="キャンセル">キャンセル</string>
    <string name="title_activity_maps">maps</string>
    <string name="regist_ok">登録完了！</string>
    <string name="login_no">ログイン失敗！</string>
    <string name="logout_ok">ログアウトしました！</string>
    <string name="title_activity_main">Main</string>
    <string name="search">検索</string>
    <string name="message">メッセージ</string>
    <string name="kyuen">救援要請</string>
    <string name="point">ポイント</string>
    <string name="ac_syosai">アカウント詳細</string>
    <string name="main">メイン</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">検索</string>
    <string name="title_dashboard">メッセージ</string>
    <string name="title_notifications">アカウント詳細</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_kyuen">救援要請</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_key">company</string>
    <string name="hint_value">US$price</string>
    <string name="insert">insert</string>
    <string name="read">read</string>
</resources>