<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/message" />

    <item
        android:id="@+id/navigation_kyuen"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/kyuen" />
    <item
        android:id="@+id/navigation_point"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/point" />
    <item
        android:id="@+id/navigation_accountsyosai"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/ac_syosai" />

</menu>