<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.b_sket.ui.home.HomeFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.b_sket.ui.home.HomeFragment"
        android:label="@string/search"
        tools:layout="@layout/kyujoyouseisentaku" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.b_sket.ui.dashboard.DashboardFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_kyuen"
        android:name="com.example.b_sket.ui.notifications.NotificationsFragment"
        android:label="@string/kyuen"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_point"
        android:name="com.example.b_sket.ui.notifications.NotificationsFragment"
        android:label="@string/point"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_accountsyosai"
        android:name="com.example.b_sket.ui.notifications.NotificationsFragment"
        android:label="@string/ac_syosai"
        tools:layout="@layout/fragment_notifications" />
</navigation>