<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="540dp"
        android:text="@string/アカウントID"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/idtxtbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/idtxtbox"
        android:layout_width="516dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="540dp"
        android:text="@string/アカウント名"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/accountnamebox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="84dp"
        android:layout_height="41dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="703dp"
        android:text="@string/性別"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/accountnamebox"
        android:layout_width="513dp"
        android:layout_height="62dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="543dp"
        android:text="@string/パスワード"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="521dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="543dp"
        android:text="@string/生年月日"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="540dp"
        android:text="@string/電話番号"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="771dp"
        android:layout_height="53dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation='horizontal'
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="92dp"
            android:layout_height="52dp"
            android:text="@string/男"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="87dp"
            android:layout_height="52dp"
            android:text="@string/女"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="460dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:text="@string/その他"
            android:textSize="24sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="476dp"
        android:layout_height="58dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="473dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="68dp"
        android:text="@string/作成"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AccountRegistCancelButton"
        android:layout_width="160dp"
        android:layout_height="63dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="380dp"
        android:layout_marginBottom="71dp"
        android:text="@string/キャンセル"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>