<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_sample">

    <TextView
        android:id="@+id/textlogout"
        android:layout_width="549dp"
        android:layout_height="216dp"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ログアウト"
        android:textColor="@color/black"
        android:textSize="150sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/no"
        android:layout_width="325dp"
        android:layout_height="154dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="416dp"
        android:layout_marginBottom="356dp"
        android:text="@string/いいえ"
        android:textSize="60sp"
        app:backgroundTint="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlogout" />

    <Button
        android:id="@+id/yes"
        android:layout_width="313dp"
        android:layout_height="152dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="356dp"
        android:text="@string/はい"
        android:textSize="60sp"
        app:backgroundTint="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/textlogout" />

</androidx.constraintlayout.widget.ConstraintLayout>