<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_sample"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="532dp"
        android:text="パスワード"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/passWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountId" />

    <Button
        android:id="@+id/retrun_button"
        android:layout_width="282dp"
        android:layout_height="244dp"
        android:text="@string/戻る"
        android:textSize="48sp"
        app:backgroundTint="#2CC334"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="578dp"
        android:layout_height="65dp"
        android:background="#ffffff"
        android:hint="@string/hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <EditText
        android:id="@+id/accountId"
        android:layout_width="578dp"
        android:layout_height="65dp"
        android:background="#ffffff"
        android:inputType="textPersonName"
        android:hint="@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="282dp"
        android:layout_height="244dp"
        android:text="ログイン"
        android:textSize="48sp"
        app:backgroundTint="#FF9999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/acid"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="532dp"
        android:text="@string/アカウントID"
        android:textSize="34sp"
        app:backgroundTint="#F642BB"
        app:layout_constraintBottom_toTopOf="@+id/accountId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>